2007-04-25  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff-load.c
	* plug-ins/common/tiff-save.c: fixed the names of the plug-in
	binaries in PLUG_IN_BINARY.

2007-04-25  Mukund Sivaraman  <muks@mukund.org>

	* configure.in
	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/Makefile.am
	* plug-ins/common/tiff-load.c
	* plug-ins/common/tiff-save.c: split TIFF load and save
	functionality into different plug-ins.

	* plug-ins/common/mkgen.pl: modified to allow plug-ins to override
	auto-generated library env; also use underscores instead of hyphens
	in the generated Makefile.am.

	* plug-ins/common/tiff.c: removed.

2007-04-25  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/paint-funcs.c (convolve_region): round pixel values
	instead if just casting the float to an integer. Fixes bug #432978.

2007-04-25  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/paint-funcs.c: whitespace cleanup.

	* plug-ins/common/despeckle.c: minor cleanups.

2007-04-25  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpscrolledpreview.c: also use the middle mouse
	button for panning.

	* plug-ins/common/nova.c: override the default mouse handling of
	the GimpScrolledPreview and allow to reposition the center using
	the left mouse button. Fixes bug #364432.

	* app/tools/gimprectangletool.c: formatting.

2007-04-24  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.3.17.

2007-04-25  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff.c: initialize the pages[] array with
	the page sequence for non-niteractive runs. Otherwise it'll
	simply load N copies of page 0.

2007-04-25  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff.c: fixed an issue where the page selection
	dialog was being shown even for non-interactive runs.

2007-04-24  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff.c: added support to load multi-page TIFF
	images as single layered image or multiple individual per-page